--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body ontouchstart="">
+  <body>
     <div id="app"></div>
     <script src="/config.js"></script>
     <script type="module" src="/src/main.ts"></script>
