--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      #app {
+        width: 100%;
+        height: 100vh;
+        background-color: #ecedee;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
