--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/config.js"></script>
-    <script type="module" src="/src/main.ts"></script>
+    <script src="./config.js"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
